--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title: "GDG DevFest Season 2014" # TODO: need to change the contents, left for @
 email: "devfest@gdg.org.ua"
 description: "GDG DevFest is a set of events all around the world"
 baseurl: ""  ## same as url as our home page
-url: "https://gsd2021-emory.github.io/"
+url: "https://gsd2021-emory.github.io/zeppelin/"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-43643469-5"
 googleAnalyticsSiteUrl: "gdg-x.github.io"
