--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 
 
 # Site Settings
-title: "GDG DevFest Season 2014" # TODO: need to change the contents, left for @Xin (delete this comment after modifications)
+title: "Georgia Statistics Day 2021" # TODO: need to change the contents, left for @Xin (delete this comment after modifications)
 email: "devfest@gdg.org.ua"
 description: "GDG DevFest is a set of events all around the world"
 baseurl: "/zeppelin"  ## test if this works
@@ -47,9 +47,9 @@ navigationLinks:  ## just edit according to https://sites.gatech.edu/gsd2019/ as
  - {permalink: "/program/", text: "Program"}
  - {permalink: "/abstracts/", text: "Abstracts"}
  - {permalink: "/poster/", text: "Poster Sessions"}
-# - {permalink: "/hotels/", text: "Hotels"}
- #- {permalink: "/parking/", text: "Parking"}
- #- {permalink: "/sponsors/", text: "Sponsors"}
+ - {permalink: "/hotels/", text: "Hotels"}
+ - {permalink: "/parking/", text: "Parking"}
+ - {permalink: "/sponsors/", text: "Sponsors"}
 bottomNavigationLinks:
  - {link: "http://bit.ly/dfua-c4p", text: "Become a speaker"}
 rightNavigationButtons:
