--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-# Plugins
-gems:
-- jekyll-sitemap
-safe: false
+# # Plugins
+# gems:
+# - jekyll-sitemap
+# safe: false
 
 # Build Settings
 markdown: kramdown
