--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "GSD 2021"
 email: "devfest@gdg.org.ua"
 description: "GDG DevFest is a set of events all around the world"
-baseurl: "" ##/zeppelin
+baseurl: "/zeppelin" ##
 url: "https://gsd2021-emory.io"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-43643469-5"
