--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title: "GSD 2021"
 email: "devfest@gdg.org.ua"
 description: "GDG DevFest is a set of events all around the world"
 baseurl: "/zeppelin" ##
-url: "https://gsd2021-emory.io"
+url: "https://gsd2021-emory.github.io"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-43643469-5"
 googleAnalyticsSiteUrl: "gdg-x.github.io"
