--- a/_config.yml
+++ b/_config.yml
@@ -43,12 +43,14 @@ c4sponsorsUrl: "/assets/GDG_DevFest_Partnership.pdf"
 # Navigation
 navigationLinks:
  - {permalink: "/", text: "Home"}
- - {permalink: "/blog/", text: "Blog"}
- - {permalink: "/schedule/", text: "Schedule"}
  - {permalink: "/speakers/", text: "Speakers"}
+ - {permalink: "/schedule/", text: "Program"}
+ - {permalink: "/logistics/", text: "Abstracts"}
+ - {permalink: "/blog/", text: "Poster Sessions"}
  - {permalink: "/team/", text: "Team"}
- - {permalink: "/logistics/", text: "Program"}
- #- {permalink: "/hackathon/", text: "Hackathon"}
+ - {permalink: "/logistics/", text: "Hotels"}
+ - {permalink: "/logistics/", text: "Parking"} 
+ - {permalink: "/hackathon/", text: "Sponsors"}
 bottomNavigationLinks:
  - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
 rightNavigationButtons:
