--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ navigationLinks:
  - {permalink: "/logistics/", text: "Parking"} 
  - {permalink: "/hackathon/", text: "Sponsors"}
 bottomNavigationLinks:
- - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
+ - {link: "https://bit.ly/dfua-c4p", text: "See Schedule"}
 rightNavigationButtons:
  - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
 
@@ -64,8 +64,8 @@ typeoutTextValues: '""
 ##,"Season", "Ukraine", "Germany", "USA"'
 typeoutFallback: "Season"
 heroButtons:
- - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
- - {permalink: "/#tickets", text: "Buy tickets"}
+ - {link: "/schedule/", text: "SEE SCHEDULE"}
+ - {permalink: "/#tickets", text: "REGISTER NOW"}
 
 # About Block
 aboutTitle: "About Georgia Statistics Day 2021"
@@ -73,7 +73,7 @@ aboutBlock:
 #  - {title: "Conference", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lots of fun!" }
 #  - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
 #  - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
- - {title: "", image: "", text: "The Department of Biostatistics and Bioinformatics at Emory welcomes you to Emory Univeristy for Georgia Statistics Day 2021." }
+ - {title: "", text: "The Department of Biostatistics and Bioinformatics at Emory welcomes you to Emory Univeristy for Georgia Statistics Day 2021." }
 
 
 # Statistic Block
