--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,10 @@ navigationLinks:
  - {permalink: "/logistics/", text: "Hotels"}
  - {permalink: "/logistics/", text: "Parking"} 
  - {permalink: "/hackathon/", text: "Sponsors"}
-bottomNavigationLinks:
- - {link: "https://bit.ly/dfua-c4p", text: "See Schedule"}
-rightNavigationButtons:
- - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
+# bottomNavigationLinks:
+#  - {link: "https://bit.ly/dfua-c4p", text: "See Schedule"}
+# rightNavigationButtons:
+#  - {link: "https://bit.ly/dfua-c4p", text: "Become a speaker"}
 
 # Hero Block
 heroImage: "hero.jpg"
@@ -64,7 +64,7 @@ typeoutTextValues: '""
 ##,"Season", "Ukraine", "Germany", "USA"'
 typeoutFallback: "Season"
 heroButtons:
- - {link: "/schedule/", text: "SEE SCHEDULE"}
+ - {link: "/schedule/", text: "SEE PROGRAM"}
  - {permalink: "/#tickets", text: "REGISTER NOW"}
 
 # About Block
@@ -93,21 +93,21 @@ aboutBlock:
 # rockstarSpeakersTitle: "Rockstar speakers"
 # rockstarSpeakersButtonText: "See all speakers"
 
-# # Location Block
-# locationBlockTitle: "Location"
-# eventLocationName: "Conference Hall"
-# eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
-# eventStreetAddress: "22 Teatral'na St"
-# eventAddressLocality: "Lviv"
-# eventAddressLocalityRegion: "Lvivska"
-# eventPostalCode: "79000"
-# eventAddressCountry: "Ukraine"
-# eventStartTime: "2014-10-25T10:00"
-# eventDoorTime: "09:00"
-# eventEndTime: "2014-10-25T20:00"
-# eventPlaceCoordinates: "49.843237, 24.028751"
-# mapCenterCoordinates: "49.842537, 24.025701"
-# mapMobileCenterCoordinates: "49.841620, 24.029411"
+# Location Block
+locationBlockTitle: "Location"
+eventLocationName: "Conference Hall"
+eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
+eventStreetAddress: "22 Teatral'na St"
+eventAddressLocality: "Lviv"
+eventAddressLocalityRegion: "Lvivska"
+eventPostalCode: "79000"
+eventAddressCountry: "Ukraine"
+eventStartTime: "2014-10-25T10:00"
+eventDoorTime: "09:00"
+eventEndTime: "2014-10-25T20:00"
+eventPlaceCoordinates: "49.843237, 24.028751"
+mapCenterCoordinates: "49.842537, 24.025701"
+mapMobileCenterCoordinates: "49.841620, 24.029411"
 
 # # Venue Block
 # venueBlockTitle: "Venue"
@@ -124,16 +124,16 @@ aboutBlock:
 # twitterHashTag: "devfest"
 # twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
-# # Partners Block
-# organizersTitle: "Organizers"
-# partnersTitle: "Partners"
-# partnersC4sponsorsButton: "Become a sponsor"
+# Partners Block
+organizersTitle: "Organizers"
+partnersTitle: "Partners"
+partnersC4sponsorsButton: "Become a sponsor"
 
-# # Subscribe Block
-# subscribeImage: "subscribe.jpg"
-# subscribeTitle: "Subscribe for updates"
-# subscribeAction: "https://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
-# subscribeInfo: "Registration will be open around end of August. Number of tickets are limited. Stay tuned!"
+# Subscribe Block
+subscribeImage: "subscribe.jpg"
+subscribeTitle: "Subscribe for updates"
+subscribeAction: "https://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
+subscribeInfo: "Registration will be open around end of August. Number of tickets are limited. Stay tuned!"
 
 # # Tickets Block
 # ticketsTitle: "Pricetable"
@@ -177,26 +177,26 @@ aboutBlock:
 #   soldOut: true
 #   soldOutText: "Sold Out"
 
-# # Footer
-# socialLinks:
-#  - {link: "https://plus.google.com/b/102444623953913144164", icon: "google-plus"}
-#  - {link: "https://twitter.com/intent/user?screen_name=GDGLviv", icon: "twitter"}
-#  - {link: "https://facebook.com/GDGLviv", icon: "facebook"}
-#  - {permalink: "/feed.xml", icon: "rss"}
-# footerBlocks:
-#  -
-#   title: "Links"
-#   links:
-#    - {link: "http://gdg.org.ua", text: "GDG.org.ua"}
-#    - {link: "https://developers.google.com", text: "Google Developers"}
-#  -
-#   title: "Contacts"
-#   links:
-#    - {link: "mailto:lviv@gdg.org.ua", text: "lviv@gdg.org.ua"}
-#  -
-#   title: "FAQ"
-#   links:
-#    - {permalink: "/cod/", text: "Code of Conduct"}
+# Footer
+socialLinks:
+ - {link: "https://plus.google.com/b/102444623953913144164", icon: "google-plus"}
+ - {link: "https://twitter.com/intent/user?screen_name=GDGLviv", icon: "twitter"}
+ - {link: "https://facebook.com/GDGLviv", icon: "facebook"}
+ - {permalink: "/feed.xml", icon: "rss"}
+footerBlocks:
+ -
+  title: "Links"
+  links:
+   - {link: "http://gdg.org.ua", text: "GDG.org.ua"}
+   - {link: "https://developers.google.com", text: "Google Developers"}
+ -
+  title: "Contacts"
+  links:
+   - {link: "mailto:lviv@gdg.org.ua", text: "lviv@gdg.org.ua"}
+ -
+  title: "FAQ"
+  links:
+   - {permalink: "/cod/", text: "Code of Conduct"}
 
 # # Blog
 # blogTitle: "Latest news"
