--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ navigationLinks:
 
 # Hero Block
 heroImage: "hero.jpg"
-heroTitle: "Georgia Statistics Day <typeout> 2021"
-eventDate: "October, 2021"
+heroTitle: "<b> Georgia Statistics Day <typeout> 2021"
+eventDate: "<b> October, 2021"
 typeoutTextValues: '"" 
 ##,"Season", "Ukraine", "Germany", "USA"'
 typeoutFallback: "Season"
