--- a/_config.yml
+++ b/_config.yml
@@ -94,21 +94,21 @@ aboutBlock:
 # rockstarSpeakersTitle: "Rockstar speakers"
 # rockstarSpeakersButtonText: "See all speakers"
 
-# Location Block
-locationBlockTitle: "Location"
-eventLocationName: "Conference Hall"
-eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
-eventStreetAddress: "22 Teatral'na St"
-eventAddressLocality: "Lviv"
-eventAddressLocalityRegion: "Lvivska"
-eventPostalCode: "79000"
-eventAddressCountry: "Ukraine"
-eventStartTime: "2014-10-25T10:00"
-eventDoorTime: "09:00"
-eventEndTime: "2014-10-25T20:00"
-eventPlaceCoordinates: "49.843237, 24.028751"
-mapCenterCoordinates: "49.842537, 24.025701"
-mapMobileCenterCoordinates: "49.841620, 24.029411"
+# # Location Block
+# locationBlockTitle: "Location"
+# eventLocationName: "Conference Hall"
+# eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
+# eventStreetAddress: "22 Teatral'na St"
+# eventAddressLocality: "Lviv"
+# eventAddressLocalityRegion: "Lvivska"
+# eventPostalCode: "79000"
+# eventAddressCountry: "Ukraine"
+# eventStartTime: "2014-10-25T10:00"
+# eventDoorTime: "09:00"
+# eventEndTime: "2014-10-25T20:00"
+# eventPlaceCoordinates: "49.843237, 24.028751"
+# mapCenterCoordinates: "49.842537, 24.025701"
+# mapMobileCenterCoordinates: "49.841620, 24.029411"
 
 # # Venue Block
 # venueBlockTitle: "Venue"
@@ -125,16 +125,16 @@ mapMobileCenterCoordinates: "49.841620, 24.029411"
 # twitterHashTag: "devfest"
 # twitterFeed: "http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=8000"
 
-# Partners Block
-organizersTitle: "Organizers"
-partnersTitle: "Partners"
-partnersC4sponsorsButton: "Become a sponsor"
+# # Partners Block
+# organizersTitle: "Organizers"
+# partnersTitle: "Partners"
+# partnersC4sponsorsButton: "Become a sponsor"
 
-# Subscribe Block
-subscribeImage: "subscribe.jpg"
-subscribeTitle: "Subscribe for updates"
-subscribeAction: "https://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
-subscribeInfo: "Registration will be open around end of August. Number of tickets are limited. Stay tuned!"
+# # Subscribe Block
+# subscribeImage: "subscribe.jpg"
+# subscribeTitle: "Subscribe for updates"
+# subscribeAction: "https://gdg.us5.list-manage1.com/subscribe/post?u=9fc8aa205b0521b5f05fc8e1e&amp;id=ae0fb459fc"
+# subscribeInfo: "Registration will be open around end of August. Number of tickets are limited. Stay tuned!"
 
 # # Tickets Block
 # ticketsTitle: "Pricetable"
