Change front page image

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ navigationLinks:
 
 # Hero Block
 #heroImage: "hero.jpg"
-heroImage: "images.jpeg"
+heroImage: "frontpage.jpg"
 heroTitle: "<b> Georgia Statistics Day <typeout> 2021"
 eventDate: "<b> October, 2021"
 typeoutTextValues: '"" 
