--- a/_config.yml
+++ b/_config.yml
@@ -222,7 +222,7 @@ findWayBicycling: "BICYCLING"
 findWayTransit: "TRANSIT"
 findWayFindFlight: "Find Flight"
 logisticsMapCenterCoordinates: "49.056728, 3.117289"
-logisticsMapMobileCenterCoordinates: "48.335365, 23.711648"
+logisticsMapMobileCenterCoordinates: "33.7966554,-84.327384"
 logisticsMapAutoDirections: false
 
 # Logistics Direction Details Block
