--- a/_config.yml
+++ b/_config.yml
@@ -29,15 +29,15 @@ organizerLogo: ""
 organizerLink: ""
 
 # Head
-metaKeywords: "event, gdg, devfest, google, programming, android, chrome, developers, lviv"
-twitterAccount: "@DevFest"
-socialImageSrcGooglePlus: "/img/seo/sharing-google-plus.png"
-socialImageSrcTwitter: "/img/seo/sharing-twitter.png"
-socialImageSrcFacebook: "/img/seo/sharing-facebook.png"
+metaKeywords: "event, gsd, Emory, statistics"
+twitterAccount: ""
+socialImageSrcGooglePlus: ""
+socialImageSrcTwitter: ""
+socialImageSrcFacebook: ""
 
 # Documents
 c4pUrl: "https://bit.ly/dfua-c4p"
-c4sponsorsUrl: "/assets/GDG_DevFest_Partnership.pdf"
+c4sponsorsUrl: ""
 
 
 # Navigation
