--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,8 @@ aboutBlock:
  The purpose of this event is to promote interdisciplinary research within the flagship institutions of the state of Georgia. Our conference will enable junior researchers in the Southeast region of the United States, including graduate students, to present their work, to see state of the art developments in research on statistics and related scientific areas, and to interact with some of the key players in the area. Georgia Statistics Day puts emphasis on mentoring of junior researchers and on interaction between senior and junior researchers.
 We appreciate your attendance and look forward to a successful and productive conference!" }
 
+{% include about.txt %}
+
 
 # # Statistic Block
 # statisticBlockImage: "statistic.jpg"
