--- a/_config.yml
+++ b/_config.yml
@@ -74,11 +74,15 @@ aboutBlock:
 #  - {title: "Conference", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lots of fun!" }
 #  - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
 #  - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
- - {title: "", text: "The Department of Biostatistics and Bioinformatics at Emory welcomes you to Emory Univeristy for Georgia Statistics Day 2021. 
- The purpose of this event is to promote interdisciplinary research within the flagship institutions of the state of Georgia. Our conference will enable junior researchers in the Southeast region of the United States, including graduate students, to present their work, to see state of the art developments in research on statistics and related scientific areas, and to interact with some of the key players in the area. Georgia Statistics Day puts emphasis on mentoring of junior researchers and on interaction between senior and junior researchers.
-We appreciate your attendance and look forward to a successful and productive conference!" }
-
-{% include about.txt %}
+ - {title: "", text: "The Department of Biostatistics and Bioinformatics at
+the Rollins School of Public Health, Emory University
+welcomes you to the 2021 Georgia Statistics Day (GSD). 
+GSD is a one-day free local research event designed to promote interdisciplinary research
+among statistical researchers and data scientists within Georgia.
+Attendees of GSD generally include faculty, postdocs, and students from academic institutions,
+researchers from Centers for Disease Control and Prevention (CDC),
+and practitioners from industry. The program of GSD covers a diverse range of
+topics related to statistical methods, applications, and practice." }
 
 
 # # Statistic Block
