--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "Georgia Statistics Day 2021"
 email: "emorygsd2021@gmail.com"
 description: "Georgia Statistics Day held by Emory"
-baseurl: "/gsd2021-emory.github.io" ##/zeppelin
+baseurl: "" ##/zeppelin
 url: "https://gsd2021-emory.github.io"
 permalink: "/blog/:title"
 googleAnalyticsTrackingId: "UA-43643469-5"
