--- a/_config.yml
+++ b/_config.yml
@@ -69,20 +69,20 @@ heroButtons:
  - {permalink: "/#tickets", text: "REGISTER NOW"}
 
 # About Block
-aboutTitle: "<b> About Georgia Statistics Day 2021"
-aboutBlock:
-#  - {title: "Conference", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lots of fun!" }
-#  - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
-#  - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
- - {title: "", text: "The Department of Biostatistics and Bioinformatics at
-the Rollins School of Public Health, Emory University
-welcomes you to the 2021 Georgia Statistics Day (GSD). 
-GSD is a one-day free local research event designed to promote interdisciplinary research
-among statistical researchers and data scientists within Georgia.
-Attendees of GSD generally include faculty, postdocs, and students from academic institutions,
-researchers from Centers for Disease Control and Prevention (CDC),
-and practitioners from industry. The program of GSD covers a diverse range of
-topics related to statistical methods, applications, and practice." }
+#aboutTitle: "<b> About Georgia Statistics Day 2021"
+#aboutBlock:
+##  - {title: "Conference", image: "conference.jpg", text: "The biggest Google related event in the country carefully crafted for you by GDG community! Awesome speakers and lots of fun!" }
+##  - {title: "Workshops", image: "workshop.jpg", text: "Full-day of workshops, hands-on experience, hacking and debugging. Come and tame your favourite technology!" }
+##  - {title: "Hackathon", image: "hackathon.jpg", text: "Full-day freestyle hackathon! Want some real team building on friday? Grab your team and join our hackathon!" }
+# - {title: "", text: "The Department of Biostatistics and Bioinformatics at
+#the Rollins School of Public Health, Emory University
+#welcomes you to the 2021 Georgia Statistics Day (GSD). 
+#GSD is a one-day free local research event designed to promote interdisciplinary research
+#among statistical researchers and data scientists within Georgia.
+#Attendees of GSD generally include faculty, postdocs, and students from academic institutions,
+#researchers from Centers for Disease Control and Prevention (CDC),
+#and practitioners from industry. The program of GSD covers a diverse range of
+#topics related to statistical methods, applications, and practice." }
 
 
 # # Statistic Block
@@ -97,26 +97,26 @@ topics related to statistical methods, applications, and practice." }
 # latestNewsTitle: "Latest news"
 
 # Rockstar Speakers Block
-rockstarSpeakersImage: "rockstar-speakers.jpg"
-rockstarSpeakersCount: 4
-rockstarSpeakersTitle: "Keynote speakers"
-rockstarSpeakersButtonText: "See all speakers"
+#rockstarSpeakersImage: "rockstar-speakers.jpg"
+#rockstarSpeakersCount: 4
+#rockstarSpeakersTitle: "Keynote speakers"
+#rockstarSpeakersButtonText: "See all speakers"
 
 # Location Block
-locationBlockTitle: "Location"
-eventLocationName: "Conference Hall"
-eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
-eventStreetAddress: "22 Teatral'na St"
-eventAddressLocality: "Lviv"
-eventAddressLocalityRegion: "Lvivska"
-eventPostalCode: "79000"
-eventAddressCountry: "Ukraine"
-eventStartTime: "2014-10-25T10:00"
-eventDoorTime: "09:00"
-eventEndTime: "2014-10-25T20:00"
-eventPlaceCoordinates: "49.843237, 24.028751"
-mapCenterCoordinates: "49.842537, 24.025701"
-mapMobileCenterCoordinates: "49.841620, 24.029411"
+#locationBlockTitle: "Location"
+#eventLocationName: "Conference Hall"
+#eventLocationLink: "http://cabinet.kinopalace.lviv.ua/showtimes/"
+#eventStreetAddress: "22 Teatral'na St"
+#eventAddressLocality: "Lviv"
+#eventAddressLocalityRegion: "Lvivska"
+#eventPostalCode: "79000"
+#eventAddressCountry: "Ukraine"
+#eventStartTime: "2014-10-25T10:00"
+#eventDoorTime: "09:00"
+#eventEndTime: "2014-10-25T20:00"
+#eventPlaceCoordinates: "49.843237, 24.028751"
+#mapCenterCoordinates: "49.842537, 24.025701"
+#mapMobileCenterCoordinates: "49.841620, 24.029411"
 
 # # Venue Block
 # venueBlockTitle: "Venue"
